# mcp-voice

./: .dockerignore  DEPLOY.md  Dockerfile  README.md  biome.json  docker-compose.yml  knip.json  package.json  tsconfig.json
biome-plugins/: no-locale-compare.grit
eval-harness/: .dockerignore  Dockerfile  README.md  pyproject.toml
eval-harness/evalharness/: app.py  calibration.py  features.py  gate.py  metrics.py  models.py  stylometry.py
eval-harness/tests/: fixtures.py  test_app.py  test_features.py  test_gate.py  test_stylometry.py
ops/: bootstrap.sql
src/: accounting.ts  boundary.ts  code-prose.ts  corpus-record.ts  db.ts  dedup.ts  embedder.ts  exemplar-store.ts  http-gate.ts  http.ts  index.ts  main.ts  migrate.ts  pipeline.ts  profile-store.ts  register.ts  rrf.ts  schema.ts  vector.ts
src/voice/: engine.ts  (+14 more)
test/: accounting.test.ts  boundary.test.ts  code-prose.test.ts  corpus-record.test.ts  dedup.test.ts  email-adapter.test.ts  exemplar-store.test.ts  http-gate.test.ts  matrix-adapter.test.ts  matrix-boundary.test.ts  pipeline.test.ts  profile-store.test.ts  register.test.ts  retrieval.test.ts  rrf.test.ts  smoke.test.ts  vector.test.ts  voice-assemble.test.ts  voice-build-profile.test.ts  voice-build-voice.test.ts  voice-claude-client.test.ts  voice-corpus-file.test.ts  voice-deai.test.ts  voice-directory.test.ts  voice-embedder-ollama.test.ts  voice-engine.test.ts  voice-eval-client.test.ts  voice-generate.test.ts  voice-mcp-tools.test.ts  voice-prose-extractor.test.ts  voice-register.test.ts  voice-rhythm.test.ts  voice-storage-adapters.test.ts
(+18 files in other folders)
